# mol

./: .ai-context  .copilot-codeGeneration-instructions.md  .cursorrules  .dockerignore  .env.example  .gcloudignore  .gitignore  AtomPredictor.js  DEBUG-GUIDE.md  DEBUGGING.md  DEBUG_LAUNCHER.md  DEPENDENCIES_ROADMAP.md  DEPLOYMENT.md  DEV_SETUP.md  DIRECT_AWS_DEPLOY.md  GOOGLE_VS_AWS_DIRECT.md  JUST-DO-IT.md  MINIMAL_DEPLOYMENT.md  PASSWORD_MANAGER_RULES.md  PRODUCTION_REQUIREMENTS.md  PROJECT_PRINCIPLES.md  Pipfile  README-ui-context-automation.md  README-webkit.md  README.md  RULES.md  SERVERLESS_REALITY.md  STABLE_COMPONENTS.md  TEST_PIPELINE.md  TODO.txt  account.css  account.html  account.js  ai-analyzer.js  app.js  babel.config.js  camera.js  chem.py  cleanup  crystal.py  (+69 more)
backend/: design-principles.mdc
certs/: cert.pem  key.pem
convert/: sdf.py
cure/: chem.py  gnina.py  kmeans.py  openbabel.sh  rcsb_pdb.py  screen.py  scripts.py  spreadsheetor.py  uniprot.py  write.py
deploy/: AtomPredictor.js  package.json  schemas.js
dock/: chem.py
docs/: development-pipeline.md  jobs.html  testing-guide.md
flutter_prototype/: COMPARISON.md  LAYOUT_GUIDELINES.md  README.md  RUN_INSTRUCTIONS.md  pubspec.yaml
gcloud-func/: deploy.sh
installers/: gnina  openbabel
scripts/: README.md  alphafold  auto-deploy.js  check-domain-status.sh  config.sh  debug-pipeline  default  deploy.js  get-multimers  helper.sh  prepare-deploy.sh  quick-dev  redo_zero_bytes  setup_entrez_programs.sh  ship.js  test-livereload
src/: converter.py  sdf.py
test/: README.md  config.js  (+5 more)
(+139 files in other folders)
