[project]
name = "mol"
version = "0.1.1"
description = ""
authors = [{name = "M"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
util = {path = "../util", develop = true}
rdkit = "^2024.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
