[project]
name = "mol"
version = "0.1.1"
description = ""
authors = [{name = "M"}]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "rdkit>=2024.9.5"
]

[project.optional-dependencies]
util = ["util"]

[tool.poetry.dependencies]
util = { path = "../util", optional = true, develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"